fix: line height divisible by 4

--- a/app/themes/hunger-tv/assets/styles/globals/variables.scss
+++ b/app/themes/hunger-tv/assets/styles/globals/variables.scss
@@ -19,7 +19,7 @@ $drawer-width-closed: 18;
 
 // Typography
 $font-size: 16;
-$line-height: 22;
+$line-height: 24;
 
 $omega: 60;
 $alpha: 42;
